[package]
name = "chinenshichanaka"
version = "0.1.0"
edition = "2021"
description = "Convert an image to a favicon with the size 32x32"
license = "MIT"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
image = "0.25.5"
color_quant = "1.1.0"

[dev-dependencies]
tempfile = "3.14.0"
assert_cmd = "2.0.16"

# https://github.com/crabnebula-dev/cargo-packager
[package.metadata.packager]
before-packaging-command = "cargo build --release"
identifier = "fi.paazmaya.cli-image-converter"
product-name = "Image Converter"
out_dir = "packages"
formats = ["all"]
description = "Convert an image to a favicon with the size 32x32"
icons = ["./icon-32x32.png", "./icon-128x128.png"]
