[package]
name = "chinenshichanaka"
version = "0.1.0"
edition = "2021"
description = "Convert an image to a favicon with the size 32x32"
license = "MIT"
authors = ["Juga Paazmaya <paazmaya@yahoo.com>"]
homepage = "https://github.com/paazmaya/chinenshichanaka"
repository = "https://github.com/paazmaya/chinenshichanaka"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
image = "0.25.6"
color_quant = "1.1.0"
resvg = "0.45.1"

[dev-dependencies]
tempfile = "3.20.0"
assert_cmd = "2.0.17"

# https://github.com/crabnebula-dev/cargo-packager
[package.metadata.packager]
before-each-package-command = "cargo build --release"
identifier = "fi.paazmaya.chinenshichanaka"
product-name = "Image Converter"
out_dir = "packages"
formats = ["all"]
description = "Convert an image to a favicon with the size 32x32"
resources = ["Cargo.toml", "src", "icon-32x32.png", "icon-128x128.png"]
icons = ["./icon-32x32.png", "./icon-128x128.png"]

# appimage needs bash, apk --no-cache add libc6-compat, finally found out that its not supposed to work on musl